Passes R CMD CHECK.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/h5r@6 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,4 @@ useDynLib(h5r)
 exportPattern("^[^\\.]")
 
 ## export the classes.
-exportClass("H5Obj", "H5File", "H5Group", "H5Dataset")
+exportClass("H5Obj", "H5File", "H5Group", "H5Dataset", "H5Attribute", "H5DataContainer")
