Pass R CMD Check, -Wall
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/h5r@17 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -2,4 +2,4 @@ SHLIB = hdf5.so
 OBJS = hdf5.o
 
 PKG_CPPFLAGS = @ZLIBCPPFLAGS@ @HDF5CPPFLAGS@
-PKG_LIBS = @HDF5LDFLAGS@ @ZLIBLDFLAGS@ -lhdf5 -lhdf5_hl -lz -lm
+PKG_LIBS = @HDF5LDFLAGS@ @ZLIBLDFLAGS@ -lhdf5 -lz -lm
