--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,21 @@ useDynLib(h5r)
 ## Export everything lacking a leading .
 exportPattern("^[^\\.]")
 
-## export the classes.
-exportClasses(H5Obj, H5File, H5Group, H5Dataset, H5Attribute, H5DataContainer)
+exportClasses(H5Obj,
+              H5File,
+              H5Group,
+              H5Dataset,
+              H5Attribute,
+              H5DataContainer)
+
+importMethodsFrom(methods, show)
+
+exportMethods(getH5Group,
+              getH5Dim,
+              getH5Type,
+              getH5Dataset,
+              getH5Attribute,
+              readDataAsVector,
+              show,
+              ncol,
+              nrow)
