--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: h5r
 Type: Package
 Title: Interface to HDF5 Files
-Version: 1.0
+Version: 1.1
 Date: 2010-01-28
 Author: James Bullard
 Maintainer: <jbullard@pacificbiosciences.com>
 Depends: R (>= 2.10.0), methods, base
-Description: A package for interfacing to HDF5 files.
+Description: A package for interfacing with HDF5 files.
 License: LGPL
 
