added some more code for writing.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/h5r@46 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ exportMethods(getH5Group,
               getH5Type,
               getH5Dataset,
               getH5Attribute,
-              readDataAsVector,
+              readH5Data,
               show,
               ncol,
               nrow)
