git-svn-id: svn://svn.r-forge.r-project.org/svnroot/h5r@67 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -7,9 +7,9 @@ all :
 	R CMD BATCH --no-save testReadPoints.R &
 	R CMD BATCH --no-save testWrite.R &
 	R CMD BATCH --no-save testErrors.R & 
+	R CMD BATCH --no-save testGetGroup.R &
 
 valgrind:
-	R -d "valgrind --tool=memcheck --leak-check=full" --vanilla < testread.R
-	R -d "valgrind --tool=memcheck --leak-check=full" --vanilla < testwrite.R
+	R -d "valgrind --tool=memcheck --leak-check=full" --vanilla < testGetGroup.R
 
 
