--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: h5r
 Type: Package
 Title: Interface to HDF5 Files
-Version: 1.3
+Version: 1.4
 Date: 2011-09-19
 Author: James Bullard
 Maintainer: <jbullard@pacificbiosciences.com>
 Depends: R (>= 2.10.0), methods
 Imports: utils, methods
-Description: A package for interfacing with HDF5 files.
+Description: A package for reading and writing HDF5 files.
 License: LGPL
 
