--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Interface to HDF5 Files
 Version: 1.4.4
 Date: 2011-09-19
 Author: James Bullard
-Maintainer: <jbullard@pacificbiosciences.com>
+Maintainer: James Bullard <jbullard@pacificbiosciences.com>
 Depends: R (>= 2.10.0), methods
 Imports: utils, methods
 Description: A package for reading and writing HDF5 files.
