--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: h5r
 Type: Package
 Title: Interface to HDF5 Files
-Version: 1.4.7
+Version: 1.4.9
 Date: 2011-09-19
 Author: James Bullard
-Maintainer: James Bullard <jbullard@pacificbiosciences.com>
+Maintainer: James Bullard <extemporaneousb@yahoo.com>
 Depends: R (>= 2.10.0), methods
 Imports: utils, methods
 Description: A package for reading and writing HDF5 files.
 License: LGPL
-
+SystemRequirements: HDF5 (http://www.hdfgroup.org/)
